[project]
name = "comfyui-p2ldgan"
description = "Nodes: P2LDGAN. This integrates P2LDGAN into ComfyUI. P2LDGAN extracts lineart from input images.\n[w/To use this extension, you need to download the [a/p2ldgan model](https://drive.google.com/file/d/1To4V_Btc3QhCLBWZ0PdSNgC1cbm3isHP) and save it in the %%ComfyUI/custom_nodes/comfyui-p2ldgan/checkpoints%% directory.]"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/jamesWalker55/comfyui-p2ldgan"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-p2ldgan"
Icon = ""
